:bug: Fixed problem with logo and gap in footer

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -13,7 +13,15 @@ footer{
         align-items: center;
         color: white;
         text-align: center;
-        gap: 10%;
+        gap: 8%;
+        position: relative;
+
+        img{
+            position: absolute;
+            width: 77px;
+            top: 30px;
+            left: 40px;
+        }
 
         h3{
             font-size: 20px;
@@ -41,13 +49,12 @@ footer{
         }
 
         section{
-            position: absolute;
             width: 100%;
             display: flex;
             justify-content: space-around;
             align-items: center;
             flex-direction: row-reverse;
-            bottom: 50px;
+            margin-top: 10px;
         
             
 
